# Plasma

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: __init__.py  adaptive_concurrency.py  async_http_engine.py  attack_surface.py  cookie_analyzer.py  crawler.py  detector_registry.py  endpoint_classifier.py  endpoint_queue.py  models.py  payload_engine.py  risk_engine.py  samesite_model.py  scan_manager.py  scan_replay.py  tech_detection.py  token_analyzer.py
core/api/: api_fuzzer.py
core/auth/: auth_manager.py
core/evasion/: __init__.py  (+5 more)
docs/: architecture.md  extending.md  false-positives.md  fuzzing.md  installation.md  reporting.md  scan-profiles.md  workflows.md
modules/: __init__.py  bypass_engine.py  db_extractor.py  evasion_metrics.py  file_upload_detector.py  fuzz_engine.py  oob_collaborator.py  payload_updater.py  poc_generator.py  websocket_fuzzer.py
payloads/: fuzz_payloads.py  sqli.txt  ssrf.txt  traversal.txt  xss.txt
plugins/: example_plugin.py  fuzz_plugin_api.py  sample_evasion_plugin.py
reporting/: __init__.py  formatter.py  poc_creator.py  report_builder.py
templates/: csrf_poc_multipart.html  csrf_poc_post.html  report_pdf_notes.md  report_template.html  report_template.md
tests/: __init__.py  test_detectors.py  test_integration.py
ui/: __init__.py  dashboard.py  server.py
utils/: __init__.py  banner.py  cli_ui.py  entropy.py  har_parser.py  http_client.py  js_endpoint_extractor.py  logger.py  parser.py  response_diff.py  scan_diff.py  threading_helpers.py
(+64 files in other folders)
